first commit / minor details to updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Clean Earth Up</title>
+    <title>Saberz VS Bees</title>
     <link rel="icon" type="image/png" sizes="32x32" href="images/earth.png">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -41,7 +41,7 @@
                     <p id="accuracy">0%</p>
                 </div>
                 <div class="info-container">
-                    <img id="img-ammo" src="images/robinet.svg">
+                    <img id="img-ammo" src="images/waterdrop.png">
                     <p id="ammo">5/5</p>
                 </div>
                 <div class="info-container">
@@ -52,10 +52,10 @@
                     <h3 id="typewriter"></h3>
                 </div>
             </div>
-            <canvas id="playing-area" width="1200" height="600">
+            <canvas id="playing-area" width="1200" height="690">
             </canvas>
             <div id="btns">
-                <input type="button" id="restart" class="btn clignote" value="Let's clean!">
+                <input type="button" id="restart" class="btn clignote" value="Shoot The Bees!">
                 <input type="button" id="pause" class="btn disabled" value="Pause" disabled>
             </div>
         </div>
